# CAGD

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  index.html  sitemap.xml
B_Spline/: index.html
Bézier_Curve/: index.html
Homework/: CMakeLists.txt
Homework/Base/: CMakeLists.txt
Homework/Homeworks/: CMakeLists.txt
Homework/Homeworks/App/: CMakeLists.txt  main.cpp
Homework/Homeworks/Homework1/: CAGDLayer.cpp  CAGDLayer.h  CMakeLists.txt  HW1Layer.cpp  HW1Layer.h
Homework/Homeworks/Homework10/: CMakeLists.txt  HEMesh.cpp  HW10Layer.cpp  HW10Layer.h  LoopSubdivision.cpp  LoopSubdivision.h
Homework/Homeworks/Homework11/: CMakeLists.txt  HEMesh.cpp  HEMesh.h  HW11Layer.cpp  HW11Layer.h  Parameterization.cpp  Parameterization.h
Homework/Homeworks/Homework12/: RBF_Deformation.m
Homework/Homeworks/Homework2/: BezierCurve.cpp  CAGDLayer.cpp  CMakeLists.txt  HW2Layer.cpp  HW2Layer.h
Homework/Homeworks/Homework3/: BezierCurve.cpp  CMakeLists.txt  HW3Layer.cpp  HW3Layer.h  main.cpp
Homework/Homeworks/Homework4/: CMakeLists.txt  Ellipse.cpp  Ellipse.h  HW4Layer.cpp  HW4Layer.h
Homework/Homeworks/Homework5/: BezierSpline.cpp  BezierSpline.h  CMakeLists.txt  HW5Layer.cpp  HW5Layer.h
Homework/Homeworks/Homework6/: BSpline.cpp  BSpline.h  CMakeLists.txt  HW6Layer.cpp  HW6Layer.h
Homework/Homeworks/Homework7/: CMakeLists.txt  HW7Layer.cpp  HW7Layer.h
Homework/Homeworks/Homework8/: CMakeLists.txt  HW8Layer.cpp  HW8Layer.h
Homework/Homeworks/Homework9/: CMakeLists.txt  Ellipsoid.cpp  Ellipsoid.h  HW9Layer.cpp  HW9Layer.h  Sphere.cpp  Sphere.h
(+11 files in other folders)
